[gd_scene load_steps=10 format=3 uid="uid://bqkh61htltses"]

[ext_resource type="Script" path="res://addons/meshbuilder/mesh_builder/mesh_builder_panel.gd" id="1_k2oop"]
[ext_resource type="Texture2D" uid="uid://d4bgntwdpwrpc" path="res://addons/meshbuilder/mesh_builder_cone/icon.png" id="2_406lc"]
[ext_resource type="Texture2D" uid="uid://d4bgntwdpwrpc" path="res://addons/meshbuilder/mesh_builder_double_cone/icon.png" id="3_eh2pq"]
[ext_resource type="Texture2D" uid="uid://d4bgntwdpwrpc" path="res://addons/meshbuilder/mesh_builder_cube/icon.png" id="4_ohftw"]
[ext_resource type="Texture2D" uid="uid://d4bgntwdpwrpc" path="res://addons/meshbuilder/mesh_builder_cylinder/icon.png" id="5_w84h1"]
[ext_resource type="Texture2D" uid="uid://d4bgntwdpwrpc" path="res://addons/meshbuilder/mesh_builder_sphere/icon.png" id="6_ywgv3"]
[ext_resource type="Texture2D" uid="uid://d4bgntwdpwrpc" path="res://addons/meshbuilder/mesh_builder_half_sphere/icon.png" id="7_n0p0u"]
[ext_resource type="Texture2D" uid="uid://d4bgntwdpwrpc" path="res://addons/meshbuilder/mesh_builder_torus/icon.png" id="8_v5o8m"]
[ext_resource type="Texture2D" uid="uid://d4bgntwdpwrpc" path="res://addons/meshbuilder/mesh_builder_ring/icon.png" id="9_crk0i"]

[node name="MeshBuilderPanel" type="Control"]
custom_minimum_size = Vector2(0, 100)
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k2oop")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 170)
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(0, 170)
offset_right = 48.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
offset_right = 100.0
offset_bottom = 170.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
offset_right = 100.0
offset_bottom = 26.0
text = "Cone"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("2_406lc")

[node name="AddCone" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
self_modulate = Color(0.0235294, 1, 0, 1)
offset_left = 30.0
offset_top = 134.0
offset_right = 69.0
offset_bottom = 165.0
size_flags_horizontal = 4
text = "Add"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
offset_left = 104.0
offset_right = 204.0
offset_bottom = 170.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
offset_right = 100.0
offset_bottom = 26.0
text = "Double Cone
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer2"]
offset_top = 30.0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("3_eh2pq")

[node name="AddDoubleCone" type="Button" parent="Panel/HBoxContainer/VBoxContainer2"]
self_modulate = Color(0, 1, 0, 1)
offset_left = 30.0
offset_top = 134.0
offset_right = 69.0
offset_bottom = 165.0
size_flags_horizontal = 4
text = "Add
"

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/HBoxContainer"]
offset_left = 208.0
offset_right = 308.0
offset_bottom = 170.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer3"]
offset_right = 100.0
offset_bottom = 26.0
text = "Cube"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer3"]
offset_top = 30.0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("4_ohftw")

[node name="AddCube" type="Button" parent="Panel/HBoxContainer/VBoxContainer3"]
self_modulate = Color(0, 1, 0, 1)
offset_left = 30.0
offset_top = 134.0
offset_right = 69.0
offset_bottom = 165.0
size_flags_horizontal = 4
text = "Add
"

[node name="VBoxContainer4" type="VBoxContainer" parent="Panel/HBoxContainer"]
offset_left = 312.0
offset_right = 412.0
offset_bottom = 170.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer4"]
offset_right = 100.0
offset_bottom = 26.0
text = "Cylinder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer4"]
offset_top = 30.0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("5_w84h1")

[node name="AddCylinder" type="Button" parent="Panel/HBoxContainer/VBoxContainer4"]
self_modulate = Color(0, 1, 0, 1)
offset_left = 30.0
offset_top = 134.0
offset_right = 69.0
offset_bottom = 165.0
size_flags_horizontal = 4
text = "Add
"

[node name="VBoxContainer5" type="VBoxContainer" parent="Panel/HBoxContainer"]
offset_left = 416.0
offset_right = 516.0
offset_bottom = 170.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer5"]
offset_right = 100.0
offset_bottom = 26.0
text = "Sphere"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer5"]
offset_top = 30.0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("6_ywgv3")

[node name="AddSphere" type="Button" parent="Panel/HBoxContainer/VBoxContainer5"]
self_modulate = Color(0, 1, 0, 1)
offset_left = 30.0
offset_top = 134.0
offset_right = 69.0
offset_bottom = 165.0
size_flags_horizontal = 4
text = "Add
"

[node name="VBoxContainer6" type="VBoxContainer" parent="Panel/HBoxContainer"]
offset_left = 520.0
offset_right = 620.0
offset_bottom = 170.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer6"]
offset_right = 100.0
offset_bottom = 26.0
text = "Half Sphere"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer6"]
offset_top = 30.0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("7_n0p0u")

[node name="AddHalfSphere" type="Button" parent="Panel/HBoxContainer/VBoxContainer6"]
self_modulate = Color(0, 1, 0, 1)
offset_left = 30.0
offset_top = 134.0
offset_right = 69.0
offset_bottom = 165.0
size_flags_horizontal = 4
text = "Add
"

[node name="VBoxContainer7" type="VBoxContainer" parent="Panel/HBoxContainer"]
offset_left = 624.0
offset_right = 724.0
offset_bottom = 170.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer7"]
offset_right = 100.0
offset_bottom = 26.0
text = "Torus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer7"]
offset_top = 30.0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("8_v5o8m")

[node name="AddTorus" type="Button" parent="Panel/HBoxContainer/VBoxContainer7"]
self_modulate = Color(0, 1, 0, 1)
offset_left = 30.0
offset_top = 134.0
offset_right = 69.0
offset_bottom = 165.0
size_flags_horizontal = 4
text = "Add
"

[node name="VBoxContainer8" type="VBoxContainer" parent="Panel/HBoxContainer"]
offset_left = 728.0
offset_right = 828.0
offset_bottom = 170.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer8"]
offset_right = 100.0
offset_bottom = 26.0
text = "Ring"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer8"]
offset_top = 30.0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("9_crk0i")

[node name="AddRing" type="Button" parent="Panel/HBoxContainer/VBoxContainer8"]
self_modulate = Color(0, 1, 0, 1)
offset_left = 30.0
offset_top = 134.0
offset_right = 69.0
offset_bottom = 165.0
size_flags_horizontal = 4
text = "Add
"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/AddCone" to="." method="_on_add_cone_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer2/AddDoubleCone" to="." method="_on_add_double_cone_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer3/AddCube" to="." method="_on_add_cube_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer4/AddCylinder" to="." method="_on_add_cylinder_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer5/AddSphere" to="." method="_on_add_sphere_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer6/AddHalfSphere" to="." method="_on_add_half_sphere_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer7/AddTorus" to="." method="_on_add_torus_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer8/AddRing" to="." method="_on_add_ring_pressed"]
